--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,10 @@
     "paths": {
       "@config": [
         "./config"
-      ]
+      ],
+      "@src/*": [
+        "src/*"
+      ],
     }
   },
 }
