--- a/package.json
+++ b/package.json
@@ -23,7 +23,12 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mongoose": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/schedule": "^4.0.0",
+    "axios": "^1.6.1",
+    "lodash": "^4.17.21",
+    "mongoose": "^8.0.0",
     "node-telegram-bot-api": "^0.63.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
@@ -35,6 +40,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/lodash": "^4.14.201",
     "@types/node": "^20.3.1",
     "@types/node-telegram-bot-api": "^0.63.1",
     "@types/supertest": "^2.0.12",
