--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/schedule": "^4.0.0",
     "axios": "^1.6.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "mongoose": "^8.0.0",
     "node-telegram-bot-api": "^0.63.0",
     "reflect-metadata": "^0.1.13",
